# auto_ml_app

./: app.py  best_model.pkl  pyproject.toml
auto_analytics/: mkdocs.yml
auto_analytics/docs/: Preprocessing.md  index.md  modelling.md  visualize.md
auto_ml_app/: README.md
