[tool.poetry]
name = "auto-ml-app"
version = "0.1.0"
description = ""
authors = ["Sherwin-14 <varghesesheriwn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.14,<3.12"
kaleido = "0.2.1"
streamlit = "^1.35.0"
pycaret = "^3.3.2"
ydata-profiling = "^4.8.3"
streamlit-ydata-profiling = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
